# dxlink-rs

./: Cargo.toml  README.md
src/: lib.rs  wasm.rs
src/core/: auth.rs  channel.rs  client.rs  errors.rs  mod.rs  scheduler.rs
src/dom/: dom.rs  messages.rs  mod.rs
src/feed/: events.rs  feed.rs  messages.rs  mod.rs
src/websocket_client/: channel.rs  client.rs  config.rs  connector.rs  messages.rs  mod.rs
src/websocket_client/tests/: error_handling_tests.rs  mod.rs
tests/: compact_tests.rs  dom_tests.rs  feed_tests.rs  websocket_client_tests.rs
